updates mid June 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -92,6 +92,7 @@ bookmarks, colorlinks, breaklinks,
 \begin{document}
 {\Huge Anna Xambó}\\[0.1cm]
 \textsc{BA, MA, MSc, PhD}\\[1cm]
+\emph{Postdoctoral Research Assistant}\\
 Centre for Digital Music\\
 School of Electronic Engineering and Computer Science\\
 Queen Mary University of London\\
@@ -101,8 +102,12 @@ email: \href{mailto:a.xambo@qmul.ac.uk}{a.xambo@qmul.ac.uk}\\
 \textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}\\ 
 
 %%\hrule
-\section*{Current Position}
-\emph{Postdoctoral Research Assistant}, Centre for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London (QMUL).
+%\section*{Current Position}
+%\emph{Postdoctoral Research Assistant}, Centre for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London (QMUL).
+
+%%\hrule
+\section*{Forthcoming Position (starting date: August 1, 2018)}
+\emph{Associate Professor in Music Technology}, Department of Music, Norwegian University of Science and Technology (NTNU).
 
 %%\hrule
 \section*{Areas of Interest}
@@ -211,7 +216,7 @@ Total Dollar Amount: \$2,517,690.00
 \subsection*{Fundraiser}
 
 \years{05/2016--05/2017}\textsc{Women in Music Tech} \\
-Role: Co-Founder \& Co-Chair of the organization, Co-Organizer of the event. \\
+Role: Co-Founder \& Co-Chair of the organization. \\
 Total Fundraised Dollar Amount: \$11,450\\[.1cm]
 \years{08/2016--05/2017}\textbf{2016-2017 Academic Year}\\
 Funding body: School of Music, Georgia Tech. \\
@@ -278,17 +283,17 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Journal Articles}
 \noindent
 \years{2018}\textbf{Xambó, A.}, Roma, G. and Shah, P. and Tsuchiya, T. and Freeman, J. and Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
-\years{2016c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2016). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}.\\
-\years{2016b}Jewitt, C., Price, S., \textbf{Xambó, A.} (2016). “Conceptualising and Researching the Body in Digital Contexts: Towards New Methodological Conversations Across the Arts and Social Sciences". \emph{Qualitative Research}.\\
-\years{2016a}Jewitt, C., \textbf{Xambó, A.} and Price, S. (2016). “Exploring Methodological Innovation in the Social Sciences: The Body in Digital Environments and the Arts". \emph{International Journal of Social Research Methodology}.\\
+\years{2017c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2017). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}, 29(2), pp. 248--270.\\
+\years{2017b}Jewitt, C., Price, S., \textbf{Xambó, A.} (2017). “Conceptualising and Researching the Body in Digital Contexts: Towards New Methodological Conversations Across the Arts and Social Sciences". \emph{Qualitative Research}, 17(1), pp. 37--53.\\
+\years{2017a}Jewitt, C., \textbf{Xambó, A.} and Price, S. (2017). “Exploring Methodological Innovation in the Social Sciences: The Body in Digital Environments and the Arts". \emph{International Journal of Social Research Methodology},  20(1), pp. 105--120.\\
 \years{2013b}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2013). “Let's Jam the Reactable: Peer Learning during Musical Improvisation with a Tabletop Tangible Interface". \emph{ACM Transactions on Computer-Human Interaction}, 20(6), pp. 36:1--36:34.\\
 \years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). “Semantic Audio Content-based Music Recommendation and Visualization based on User Preference Examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
-\years{2018c}\textbf{Xambó, A.} (2018) “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA.\\ 
-\years{2018b}\textbf{Xambó, A.}, Roma, G., Lerch, A., Barthet, M., Fakekas, G. (2018) “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA.\\ 
-\years{2018a}Weisling, A., \textbf{Xambó, A.}, Olowe, I., Barthet, M. (2018) “Surveying the Compositional and Performance Practices of Audiovisual Practitioners". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA.\\ 
+\years{2018c}\textbf{Xambó, A.} (2018) “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA, pp. 174--177.\\ 
+\years{2018b}\textbf{Xambó, A.}, Roma, G., Lerch, A., Barthet, M., Fakekas, G. (2018) “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA, pp. 364--369.\\ 
+\years{2018a}Weisling, A., \textbf{Xambó, A.}, Olowe, I., Barthet, M. (2018) “Surveying the Compositional and Performance Practices of Audiovisual Practitioners". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA, pp. 344--345.\\ 
 \years{2017d}\textbf{Xambó, A.}, Shah, P., Roma, G., Freeman, J., Magerko, B. (2017) “Turn-taking and Chatting in Collaborative Music Live Coding". In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\ 
 \years{2017c}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Handwaving: Gesture Recognition for Participatory Mobile Music". In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\
 \years{2017b}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Loop-aware Audio Recording for the Web". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London\\ 
@@ -335,7 +340,8 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{External}
 \noindent
 
-\years{2018} \textsc{Oral Presenter}. (April 21, 2018). “Live Repurposing of Crowdsourced Sounds: Challenges and Opportunities of Using Online Repositories in Music Performance". \emph{Sonorities Symposium, Sonorities Festival}. Belfast, Northern Ireland.\\
+\years{2018b} \textsc{Oral Presenter}. (June 6, 2018). “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". \emph{NIME '18}. Blacksburg, Virginia, USA.\\
+\years{2018a} \textsc{Oral Presenter}. (April 21, 2018). “Live Repurposing of Crowdsourced Sounds: Challenges and Opportunities of Using Online Repositories in Music Performance". \emph{Sonorities Symposium, Sonorities Festival}. Belfast, Northern Ireland.\\
 \years{2017} \textsc{Oral Presenter}. (August 24, 2017). “Turn-taking and Chatting in Collaborative Music Live Coding". \emph{AM '17}. London.\\
 \years{2016b} \textsc{Oral Presenter}. (July 2, 2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". \emph{ICLI 2016}. Brighton, UK.\\
 \years{2016a} \textsc{Keynote Speaker}. (April 22, 2016). “Anna Xambó and Liz Dobson in Conversation". \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
@@ -377,7 +383,8 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Poster Presentations \& Demos}
 \noindent
 
-\years{2018} \textsc{Demo Presenter} together with Skach, S. (March 19, 2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". \emph{TEI '18}. Stockholm, Sweden. \\
+\years{2018b} \textsc{Poster Presenter} together with Roma, G. (June 7, 2018). “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". \emph{NIME '18}. Blacksburg, Virginia, USA. \\
+\years{2018a} \textsc{Demo Presenter} together with Skach, S. (March 19, 2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". \emph{TEI '18}. Stockholm, Sweden. \\
 \years{2017c} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A. and Xambó, A. “Constructing a Conceptual Framework for Collaborative Audiovisual Performance". \emph{ICCC '17}. Atlanta, GA, USA.\\
 \years{2017b} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A., Xambó, A., Magerko, B., Roma, G., Jacob, M., Bhanu, N., and Freeman, J. “TuneTable: A Tangible Computational Music Installation for Informal Learning". \emph{ICCC '17}. Atlanta, GA, USA.\\
 \years{2017a} \textsc{Poster \& Demo Presenter}. (March 21, 2017). “Experience and Ownership with a Tangible Computational Music Installation for Informal Learning". \emph{TEI '17}. Yokohama, Japan.\\
@@ -414,6 +421,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Solo Albums}
 \noindent
 
+\years{2018}Anna Xambó. \emph{H2RI} [FLAC/MP3 files]. Chicago (IL, USA): pan y rosas.\\
 \years{2013}peterMann. \emph{On the Go} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{2011}peterMann. \emph{init} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.
 
@@ -460,7 +468,8 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Collaborative Performances}
 \noindent
 %\years{2017e}Brown, N., Stolfi, A., Schroeder, F., Chudy, M., Pase, T., Wilkie, S., \textbf{Xambó, A.}, Ikkache, L., Weisling, A. (submitted). “Transmusicking II". \\
-\years{2018}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI '18}. Kulturhuset. Stockholm, Sweden.\\
+\years{2018b}Weisling, A., \textbf{Xambó, A.} (June 5, 2018). “Beckon". \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\
+\years{2018a}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI '18}. Kulturhuset. Stockholm, Sweden.\\
 \years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., \textbf{Xambó, A.}, Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". \emph{AM '17}. Oxford House Theatre. London, UK. \\
 \years{2017c}\textbf{Xambó, A.}, Roma, G. (August 21, 2017). “Hyperconnected Action Painting". \emph{WAC 2017}. Oxford House Theatre. London, UK. \\
 \years{2017b}Weisling, A., \textbf{Xambó, A.} (May 16, 2017). “Beacon". \emph{NIME 2017}. Stengade. Copenhagen, Denmark.\\
@@ -490,6 +499,8 @@ Collaborator: Gerard Roma.
 
 \subsection*{Code}
 \noindent
+\years{2018}Embedded AudioCommons: \href{https://github.com/AudioCommons/embedded-audiocommons}{github.com/AudioCommons/embedded-audiocommons}.\\
+Role: Concept and implementation.\\
 \years{2018}HCI Python Utils: \href{https://github.com/axambo/hci-python-utils}{github.com/axambo/hci-python-utils}.\\
 Role: Concept and implementation.\\
 \years{2017--present} WACastMix: \href{http://annaxambo.me/code/WACastMix}{annaxambo.me/code/WACastMix}.\\
@@ -617,7 +628,9 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Blogging}
 \noindent
 
-\years{05/2016--12/2017}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Co-Editor, Reviewer and Co-Author.\\ 
+\years{05/2017--present}\href{https://www.audiocommons.org/}{Audio Commons}, the blog of the EU-funded project Audio Commons. Editor-in-Chief, Reviewer and Co-Author.\\ 
+\years{10/2016--present}\href{http://annaxambo.me/blog/}{Anna Xambó's Blog}, the blog of my personal website. Author.\\ 
+\years{05/2016--12/2017}\href{http://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Co-Editor, Reviewer and Co-Author.\\ 
 \years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Co-Author. \\ 
 \years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Co-Author.\\
 \years{03/2006--03/2009}\href{http://streetypes.blogspot.com}{streeTypes}, a blog on typography in public spaces. Creator and Author.  
@@ -672,10 +685,16 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Journal Reviewer}
 \noindent
 
+\years{2018}\emph{British Journal of Educational Technology}. Wiley.\\
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
 \years{2016}\emph{Interacting with Computers}. Oxford Journals.\\
 \years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society.\\
 \years{2016}\emph{Qualitative Research}. Sage Publications.
+
+\subsection*{Panelist}
+\noindent
+
+\years{2018}\emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
 
 \subsection*{Jury Member}
 \noindent
