updates mid july 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -346,6 +346,7 @@ Candidate’s Share: 50\% (\$1,650)\\ [0.2cm]
 \subsection*{External}
 \noindent
 
+\years{2018c} \textsc{Oral Presenter}. (July 12, 2018). “Audio Commons: Challenges and Opportunities of Using Online Repositories in Music Production and Performance". \emph{Filmuniversität Babelsberg Konrad Wolf}. Potsdam, Germany.\\
 \years{2018b} \textsc{Oral Presenter}. (June 6, 2018). “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". \emph{NIME '18}. Blacksburg, Virginia, USA.\\
 \years{2018a} \textsc{Oral Presenter}. (April 21, 2018). “Live Repurposing of Crowdsourced Sounds: Challenges and Opportunities of Using Online Repositories in Music Performance". \emph{Sonorities Symposium, Sonorities Festival}. Belfast, Northern Ireland.\\
 \years{2017} \textsc{Oral Presenter}. (August 24, 2017). “Turn-taking and Chatting in Collaborative Music Live Coding". \emph{AM '17}. London.\\
@@ -665,7 +666,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \emph{Association for Computing Machinery (ACM)}.\\
 \emph{International Computer Music Association (ICMA)}.\\
 
-\subsection*{Committee Member / Conference Chair}
+\subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
 \years{2018}\textsc{Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
